refactor: use sse instead of websockets
