# paddock-gateway/docs/swagger.yaml
@@ -29,7 +29,7 @@ definitions:
       ordered_at:
         type: string
     type: object
-  main.OrderResponse:
+  main.Order:
     properties:
       destination:
         type: string
@@ -92,16 +92,16 @@ paths:
       summary: Create a new pizza order
       tags:
       - order
-  /v1/order/ws:
+  /v1/orders/sse:
     get:
       produces:
-      - application/json
+      - text/event-stream
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.OrderResponse'
-      summary: Get live orders via WebSocket
+            $ref: '#/definitions/main.Order'
+      summary: Get live orders via Server-Sent Events (SSE)
       tags:
       - order
 securityDefinitions:
